@@ -55,16 +55,8 @@ sourceSets {
 
 
 dependencies {
-    implementation files('lib/json-simple-1.1.1.jar')
-    implementation('org.json:json:20231013'){
-        exclude group: 'org.hamcrest', module: 'hamcrest-core'
-    }
-    // https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple
-    implementation('com.googlecode.json-simple:json-simple:1.1.1') {
-        exclude group: 'org.hamcrest', module: 'hamcrest-core'
-    }
-//    implementation('com.googlecode.json-simple:json-simple:1.1.1')
-//    runtime('com.github.cliftonlabs:json-simple:4.0.1')
+    implementation 'org.openjfx:javafx-base:17'
+    implementation 'org.json:json:20210307'
     testImplementation(platform('org.junit:junit-bom:5.10.1')) {
         exclude group: 'org.hamcrest', module: 'hamcrest-core'
     }
@@ -89,7 +81,6 @@ compileJava {
                 '--module-path', classpath.asPath,
                 '--add-modules', 'javafx.controls',
                 '--add-modules', 'javafx.fxml',
-                '--add-modules', 'json.simple',
         ]
         classpath = files()
     }
@@ -100,7 +91,6 @@ run{
                 '--module-path', classpath.asPath,
                 '--add-modules', 'javafx.controls',
                 '--add-modules', 'javafx.fxml',
-                '--add-modules', 'json.simple',
         ]
     }
 }
